新增注册登录功能，整合代码

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -82,7 +82,8 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <a th:href="@{'/collect/'+${session.user.id}+'/'+${question.id}}" class="community-menu">
-                        <span>收藏</span>
+
+                        <span class="glyphicon glyphicon-star" aria-hidden="true">收藏</span>
                     </a>
                 </div>
                 <div>
