--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -7,8 +7,8 @@
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main profile">
-
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="row">
+    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
         <div class="media" th:each="collection : ${pagination.data}">
 
             <div class="media-body">
@@ -18,6 +18,15 @@
                         <span>删除</span>
                     </a>
                 </h5>
+                <span class="text-desc">
+                        <span th:text="${collection.commentCount}"></span> 个回复 • <span
+                        th:text="${collection.viewCount}"></span> 次浏览 • <span
+                        th:text="${#dates.format(collection.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> •
+                        <a th:href="@{'/publish/'+${collection.id}}" class="community-menu"
+                           th:if="${session.user != null && session.user.id == collection.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                        </a>
+                </span>
             </div>
         </div>
     </div>
@@ -36,11 +45,9 @@
                         <span aria-hidden="true">&lt;</span>
                     </a>
                 </li>
-
                 <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}? 'active' : ''">
                     <a th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}"></a>
                 </li>
-
                 <li th:if="${pagination.showNext}">
                     <a th:href="@{'/profile/'+${section}(page=${pagination.page +1})}" aria-label="Previous">
                         <span aria-hidden="true">&gt;</span>
@@ -53,6 +60,19 @@
                 </li>
             </ul>
         </nav>
+    </div>
+    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <div class="list-group section">
+            <a href="/profile/questions"
+               th:class="${section == 'questions'}? 'active list-group-item' : 'list-group-item'">我的问题</a>
+            <a href="/profile/replies"
+               th:class="${section == 'replies'}? 'active list-group-item' : 'list-group-item'">
+                最新回复
+                <span class="badge" th:text="${session.unreadCount}"></span>
+            </a>
+            <a href="/profile/collect"
+               th:class="${section == 'collect'}? 'active list-group-item' : 'list-group-item'">我的收藏</a>
+        </div>
     </div>
 </div>
 </div>
