--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>码匠社区</title>
+    <title>i瓜大编程论坛</title>
     <head th:insert="~{import :: head}"></head>
 </head>
 <body>
