--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -11,7 +11,6 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
                 <div class="media" th:each="question : ${pagination.data}">
                     <div class="media-left">
@@ -91,6 +90,8 @@
                     最新回复
                     <span class="badge" th:text="${session.unreadCount}"></span>
                 </a>
+                <a href="/profile/collect"
+                   th:class="${section == 'collect'}? 'active list-group-item' : 'list-group-item'">我的收藏</a>
             </div>
         </div>
     </div>
