修改注释，删除广告功能

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="foot" class="footer">
-    <div>Copyright © 2022  ICP备000000号 · 服务器赞助:  · All Rights Reserved Powered By i瓜大编程论坛 </div>
+    <div>Copyright © 西北工业大学 All Rights Reserved ·友情链接：<a href="https://www.nwpu.edu.cn">西北工业大学</a> ·Powered By i瓜大编程论坛 </div>
 </div>
 </body>
 </html>
