--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -6,8 +6,10 @@
 
 <div th:fragment="notice">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 side">
-        <h4>广告不要乱点击呦</h4>
-        <img class="img-thumbnail question-wechat" src="/images/official-account.png">
+        <h4>推广</h4>
+        <a href="https://www.nwpu.edu.cn">
+            <img class="img-thumbnail ads" src="/images/nwpu.png">
+        </a>
     </div>
 </div>
 </body>
