--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,11 +13,15 @@
             <h3 class="form-title">注册</h3>
             <div class="col-sm-9 col-md-9">
                 <div class="form-group">
-                    <!--        用户名图标和用户名输入框            -->
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    <input class="form-control required" type="text" name="userid" id="userid" placeholder="请输入id" required>
+                    <!--        用户id输入框            -->
+                    <i class="fa fa-info" aria-hidden="true"></i>
+                    <input class="form-control required" type="text" name="userid" id="userid" placeholder="请输入用户id" required>
                 </div>
-
+                <!--         用户名输入框               -->
+                <div class="form-group">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <input class="form-control required" type="email" name="username" id="username" placeholder="请输入用户昵称" required>
+                </div>
                 <!--        密码图标和密码输入框                -->
                 <div class="form-group">
                     <i class="fa fa-key" aria-hidden="true"></i>
@@ -27,11 +31,6 @@
                 <div class="form-group">
                     <i class="fa fa-check-circle-o" aria-hidden="true"></i>
                     <input class="form-control required" type="password" name="resetpw" id="resetpw" placeholder="请确认密码" required>
-                </div>
-                <!--        邮箱                -->
-                <div class="form-group">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <input class="form-control required" type="email" name="username" id="username" placeholder="昵称" required>
                 </div>
 
                 <div class="form-group">
