--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <!--        用户名图标和用户名输入框            -->
                     <i class="fa fa-info" aria-hidden="true"></i>
-                    <input class="form-control" type="text" name="accountId" id="accountId" placeholder="请输入ID" required autofocus>
+                    <input class="form-control" type="text" name="accountId" id="accountId" placeholder="请输入用户ID" required autofocus>
                 </div>
                 <!--        密码图标和密码输入框                -->
                 <div class="form-group">
@@ -26,6 +26,9 @@
                 <div class="form-group">
                     <br>
                     <a href="/register">没有账号？立即注册</a>
+                </div>
+                <div class="form-group">
+                    <a href="/adminlogin">管理员登录</a>
                 </div>
                 <!--         登录按钮           -->
                 <div class="form-group">
