--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>登录</title>
+    <title>管理员登录</title>
     <head th:insert="~{import :: head}"></head>
     <meta charset="UTF-8">
 </head>
 <body>
 
+
 <div class="container">
     <div class="form row">
-        <form class="form-horizontal col-sm-offset-3 col-md-offset-3"action="/login" method="post">
+        <form class="form-horizontal col-sm-offset-3 col-md-offset-3"action="/adminLogin" method="post">
             <h3 class="form-title">登录</h3>
             <div class="col-sm-9 col-md-9">
                 <div class="form-group">
                     <!--        用户名图标和用户名输入框            -->
-                    <i class="fa fa-info" aria-hidden="true"></i>
-                    <input class="form-control" type="text" name="accountId" id="accountId" placeholder="请输入用户ID" required autofocus>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <input class="form-control" type="text" name="accountId" id="accountId" placeholder="请输入ID" required autofocus>
                 </div>
                 <!--        密码图标和密码输入框                -->
                 <div class="form-group">
                     <i class="fa fa-key" aria-hidden="true"></i>
                     <input class="form-control " type="password" name="password" id="password" placeholder="请输入密码" required>
-                </div>
-                <!--        用超链接跳转到注册页面               -->
-                <div class="form-group">
-                    <br>
-                    <a href="/register">没有账号？立即注册</a>
-                </div>
-                <div class="form-group">
-                    <a href="/adminLogin">管理员登录</a>
                 </div>
                 <!--         登录按钮           -->
                 <div class="form-group">
@@ -36,9 +29,13 @@
                 </div>
             </div>
         </form>
-        <div class="alert alert-danger alert-dismissible" role="alert" th:if="${loginFail}">
+        <div class="alert alert-danger alert-dismissible" role="alert" th:if="${error}">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>用户名或密码错误，请重试</strong>
+            <strong>权限不足</strong>
+        </div>
+        <div class="alert alert-danger alert-dismissible" role="alert" th:if="${adminLoginFail}">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>密码错误</strong>
         </div>
 
     </div>
